Fix : 주소 검색창 z-index 레벨 수정

--- a/src/pages/user/main/AddressModal.scss
+++ b/src/pages/user/main/AddressModal.scss
@@ -20,7 +20,7 @@
 .overlay {
   position: fixed;
   inset: 0;
-  z-index: 9999;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
